--- a/resources/index.html
+++ b/resources/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   </head>
   <body>
+    <!--     -->
+    <div id="content"></div>
     <div id="app"></div>
     <script src="/js/app.js" type="text/javascript"></script>
   </body>
