--- a/resources/index.html
+++ b/resources/index.html
@@ -3,6 +3,8 @@
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"
+          rel="stylesheet"/>
   </head>
   <body>
     <!--     -->
