--- a/resources/index.html
+++ b/resources/index.html
@@ -6,7 +6,7 @@
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"
           rel="stylesheet"/>
   </head>
-  <body>
+  <body role="document">
     <div id="app"></div>
     <script src="/js/app.js" type="text/javascript"></script>
   </body>
