--- a/resources/index.html
+++ b/resources/index.html
@@ -8,6 +8,7 @@
   </head>
   <body role="document">
     <div id="app"></div>
-    <script src="/js/app.js" type="text/javascript"></script>
+      <script src="js/out/goog/base.js" type="text/javascript"></script>
+      <script src="/js/app.js" type="text/javascript"></script>
   </body>
 </html>
